<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_friend_button"
        app:showAsAction="always"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/addfriend" />

    <item
        android:id="@+id/action_delete_friend_button"
        app:showAsAction="always"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/add"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/deletefriend"/>

    <item
        android:id="@+id/action_cancel_request_button"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/cancelbtn"
        android:icon="@drawable/deny"
        android:title="@string/cancelbtn"
        app:showAsAction="always" />
        />
</menu>