<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/master_profile"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorGray"
        android:orientation="vertical">

        <ImageButton
            style="@style/Widget.AppCompat.Button"
            android:id="@+id/settings_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/settings"
            android:src="@android:drawable/ic_menu_manage" />
    </LinearLayout>

    <ImageView
        android:id="@+id/master_profile_avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="0dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/avatar"
        android:contentDescription="@string/avatar" />

    <TextView
        android:id="@+id/master_profile_user_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:text="Brendan Moore"/>

    <TextView
        android:id="@+id/master_profile_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp"
        android:textSize="24sp"
        tools:text="Status"
        />

    <LinearLayout
        android:id="@+id/master_profile_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <LinearLayout
            android:id="@+id/master_profile_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="15dp">
            <TextView
                android:id="@+id/master_profile_friends_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="20,583"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                />
            <TextView
                android:id="@+id/master_profile_friends_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friends"
                android:textSize="16sp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/master_profile_dates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="15dp">

            <TextView
                android:id="@+id/master_profile_events_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="9,112,824"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                />
            <TextView
                android:id="@+id/master_profile_dates_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dates"
                android:textSize="16sp"
                />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/master_preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/Preferences"/>

    <TextView
        android:id="@+id/master_drink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:textSize="24sp"
        tools:text="Пивко"/>

    <Button
        android:id="@+id/master_preferences_list_btn"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:text="@string/preferences_text"
        android:textSize="36sp"/>

</LinearLayout>